samples/_failures_safe/1761540405_d60261_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dbee177b.c: In function ‘main’:
./samples/SAFE/__tmp_dbee177b.c:155:5: error: expected expression at end of input
  155 |     dijkstra(graph,
      |     ^~~~~~~~
./samples/SAFE/__tmp_dbee177b.c:155:5: error: expected declaration or statement at end of input
